--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
 
 # Thumbnails
 ._*
@@ -92,3 +92,5 @@ rsconnect/
 /*_files/
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,r
+
+/.luarc.json
